Added responsive design for smartphones

--- a/ui/org.openhab.ui.automation/web-src/src/app/app.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/app.component.css
@@ -7,8 +7,8 @@
 
 .title {
 	color: white;
-	padding: 22px; 
 	font-size: 41px; 
-	margin-left: -47px;
-	
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%); 
 }
