--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
@@ -24,3 +24,18 @@ mat-form-field {
 	clear: both;
 	margin-bottom: 0;
 }
+
+.container {
+}
+
+@media (max-width:800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .container * {
+    width: 100%;
+  }
+}
