Minor laout fix

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -4,7 +4,7 @@
         <div class="container">
 	        <div *ngIf="modalType=='event'">
 	            <div *ngIf="selectedItem.type !== 'CustomTime'">
-	                <div>
+	                <div style="display: inline-block;">
 	                    When
 	                </div>
 	                <mat-form-field *ngIf="thing.items.length > 1 else onlyOneItem">
