--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <button mat-raised-button color="warn" (click)="onDeleteMod()">Delete</button>
+            <button mat-raised-button (click)="onSelect(mod.thing)">Edit</button>
         </li>
     </ul>
 </div>
