--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.css
@@ -28,6 +28,12 @@ mat-form-field {
 .container {
 }
 
+.unsupported-type {
+	color: orange;
+	vertical-align: middle;
+	margin-left: 5px;
+}
+
 @media (max-width:800px) {
   .container {
     display: flex;
