--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -40,7 +40,7 @@
 	                <div *ngIf="selectedItem.type === 'DateTime'" style="display: inline-block">
 	                is
 	                <mat-form-field>
-	                    <input #datePicker matInput [matDatepicker]="picker" placeholder="Choose a date" [(formControl)]="rateControl">
+	                    <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(formControl)]="rateControl" [(ngModel)]="datePicker">
 	                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle> 
 	                  <mat-datepicker #picker></mat-datepicker> 
 	                </mat-form-field>
