--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -3,7 +3,7 @@
 </div>
 <div *ngIf="extensionMissing" class="missingExtensionClass overviewdiv">
 	<h3>OpenHAB is not configured correctly for automation yet. <br>
-	Please follow the <a href="temp">guide</a> to finish the configuration.</h3>
+	Please follow the <a href="assets/installation_guide.pdf">guide</a> to finish the configuration.</h3>
 </div>
 <div *ngIf="loadError" class="missingExtensionClass overviewdiv">
     <h3>Recipes could not be fetched. Please verify that openHAB is working correctly.</h3>
