Fixed minor validation of days bug

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -169,7 +169,7 @@
             <button mat-button (click)="onNoClick()" tabindex="2">Cancel</button>
             <!-- <div *ngIf="selectedItem.type === 'Number' else noStateDescription">  <button mat-button [disabled]="!rateControl.valid &&  selectedItem.type === 'Number'" (click)="save()" tabindex="-1">Save</button> </div>  -->
             <button mat-button 
-                [disabled]="(!daysChosen && modalType !== 'condition')
+                [disabled]="(selectedDays.length === 0 && modalType === 'event' && selectedItem.type === 'CustomTime')
                 || (!rateControl.valid && selectedItem.type !== 'Switch' && selectedOperator.value !=='?')
                 || (modalType === 'condition' && selectedItem.type === 'CustomTime' && !requireControl.valid)
                 || (selectedItem.type === 'DateTime' && (!rateControl.valid || !requireControl.valid))
